--- a/SSY/index.html
+++ b/SSY/index.html
@@ -27,7 +27,7 @@
           <div class="profile__wrap">
             <div class="profile__title">
               <!-- edit 2 begin -->
-              MBTI+
+              +MBTI
               <!-- edit 2 end -->
             </div>
             <div class="profile__name">
@@ -43,7 +43,7 @@
       <!-- edit 4 begin -->
       <div class="container">
         <!-- example of image begin -->
-        <img src="./imgs/img01.jpg" loading="lazy" />
+        <img src="./imgs/컨펌용.jpg" loading="lazy" />
         <!-- example of image end -->
       </div>
       <!-- edit 4 end -->
